--- a/indexcss.css
+++ b/indexcss.css
@@ -210,6 +210,8 @@ a:hover {
 
 .app{
   padding-left: 20%;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 
 .lols{
@@ -273,12 +275,16 @@ a {
   text-decoration: none;
 }
 footer{
-  background: linear-gradient(to bottom right, white,#ff1515);
+  background: linear-gradient(to bottom right, rgb(233, 233, 233),#ff1515);
   width: 100%;
 }
 
 .headertext{
   font-family: 'Nunito', sans-serif;
+  color: #ff3838;
+}
+.headericons{
+  font-size: 22px;
 }
 
 .footerleft{
@@ -316,5 +322,10 @@ footer{
 @media (min-width:994px) {
   .image{
     margin-top: 10%;
+  }
+}
+@media (max-width: 991px) {
+  .content{
+    margin-top: 180px;
   }
 }
